# vocalize

./: .gitignore  AUTONOMOUS_GGML_IMPLEMENTATION.md  COMMERCIAL-LICENSE.md  Cargo.toml  DEVELOPMENT.md  GGML_IMPLEMENTATION_STATUS.md  GGML_OPTIMIZATION_PLAN.md  LICENSE  LICENSE-EVOLUTION.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_PLAN_V2.md  README.md  UPDATED_ARCHITECTURE.md  build_and_bundle_complete.sh  build_linux.sh  build_macos.sh  build_windows.sh  issues.md  pyproject.toml  requirements.md
.cargo/: config.toml
.claude/: settings.local.json
.claude/skills/app-restart/: SKILL.md
.claude/skills/dev-agent/: SKILL.md
.claude/skills/docs-agent/: SKILL.md
.claude/skills/docs-update/: SKILL.md
.claude/skills/forge-dev-agent/: SKILL.md
.claude/skills/forge-docs-agent/: SKILL.md
.claude/skills/forge-review-agent/: SKILL.md
.claude/skills/forge-spec-agent/: SKILL.md
.claude/skills/forge-verify-agent/: SKILL.md
.claude/skills/review-agent/: SKILL.md
.claude/skills/spec-agent/: SKILL.md
.claude/skills/spec-build/: SKILL.md  handoff-schema.md  routing-table.md
.claude/skills/spec-compile/: SKILL.md
.claude/skills/spec-crap/: SKILL.md
.claude/skills/spec-create/: SKILL.md
.claude/skills/spec-forge/: SKILL.md  handoff-schema.md  routing-table.md
.claude/skills/spec-simplify/: SKILL.md
.claude/skills/spec-test/: SKILL.md
.claude/skills/verify-agent/: SKILL.md
.github/ISSUE_TEMPLATE/: commercial-license-request.md
crates/: Cargo.toml
crates/vocalize-core/: Cargo.toml  README.md  build.rs
crates/vocalize-core/benches/: audio_benchmark.rs  tts_benchmark.rs
crates/vocalize-core/src/: audio_device.rs  audio_writer.rs  error.rs  ggml_engine.rs  lib.rs  onnx_engine.rs  tts_engine.rs  voice_manager.rs  wav_writer.rs
crates/vocalize-core/src/ggml_engine/: gguf_format.rs  phoneme_processor.rs  simple_tensor.rs  tensor_ops.rs  vits_model.rs
crates/vocalize-core/src/model/: discovery.rs  manager.rs  mod.rs  types.rs
crates/vocalize-core/src/models/: kokoro_model.rs  mod.rs
crates/vocalize-core/src/onnx_engine/: session_pool.rs
crates/vocalize-core/tests/: bdd.rs  integration_tests.rs  test_dependencies.rs  test_model_manager.rs  test_no_fallback.rs  test_onnx_tts_engine.rs  test_phoneme_integration.rs  test_real_kokoro_validation.rs
crates/vocalize-core/tests/bdd/steps/: mod.rs  smoke.rs
crates/vocalize-python/: Cargo.toml  build.rs  pyproject.toml
crates/vocalize-python/src/: audio_device.rs  lib.rs  simple_bindings.rs  tts_engine.rs  voice_manager.rs
crates/vocalize-rust/: Cargo.toml  build.rs  pyproject.toml
crates/vocalize-rust/src/: audio_writer.rs  error.rs  lib.rs  runtime_manager.rs
test/features/: bdd-harness-smoke.feature
test/tools/: crap.py  crap_rust.py  timeline_writer.py
tests/: integration_tests.py  test_cli_neural_only.py
tools/: convert_piper_to_gguf.py  download_piper_models.py  test_ggml_engine.py  test_rust_ggml.sh
vocalize/: __init__.py  __main__.py  _env_setup.py  _version.py  cache_builder.py  cli.py  config.py  model_manager.py  model_optimizer.py  optimize_cli.py  token_cache.py  voice_manager.py
vocalize/tests/: __init__.py  test_audio_device.py  test_audio_writer.py  test_cli.py  test_integration.py  test_tts_engine.py
