[package]
name = "vocalize-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core TTS engine for Vocalize - high-performance text-to-speech synthesis with GGML"

[dependencies]
# Core dependencies
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true

# GGML for fast inference (replacing ONNX)
# Removed Candle dependencies to fix cross-compilation issues
# Using simple tensor wrapper for mock implementation

# Memory mapping for instant model loading
memmap2 = "0.9"

# Fast serialization
bincode = "1.3"
rmp-serde = "1.1"  # MessagePack for metadata

# ndarray for tensor operations
ndarray = "0.15"
half = "2.3"  # For f16 support

# Text processing - espeak phonemes for Piper
# espeakng = "0.1"  # Removed - using pre-built DLLs instead to avoid cross-compilation issues

# Configuration
toml = "0.8"
serde_json = "1.0"

# Text processing
unicode-normalization = "0.1"

# ONNX Runtime (optional for fallback)
ort = { version = "2.0.0-rc.2", optional = true }

# Audio file writing (no external system deps)
hound = "3.5"  # WAV writing

# Utilities
uuid.workspace = true
once_cell.workspace = true
glob = "0.3"
directories = "5.0"
parking_lot.workspace = true
rayon.workspace = true
chrono = "0.4"
num_cpus = "1.16"

# Binary serialization for phoneme dictionaries
byteorder = "1.5"
lz4_flex = "0.11"  # Fast compression for embedded data

[build-dependencies]
# For embedding phoneme data at compile time
include_dir = "0.7"

[dev-dependencies]
# Existing test deps
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true
env_logger.workspace = true
tokio-test = "0.4"

# Testing tools
mockall = "0.12"
assert_fs = "1.1"
predicates = "3.1"
test-log = "0.2"
serial_test = "3.1"
rstest = "0.18"

[features]
default = []
# Feature for embedding models directly in binary
embedded-models = []
# ONNX backend support
onnx = ["ort"]

[[bench]]
name = "tts_benchmark"
harness = false

[[bench]]
name = "audio_benchmark"
harness = false