[package]
name = "vocalize-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core TTS engine for Vocalize - high-performance text-to-speech synthesis with GGML"

[dependencies]
# Core dependencies
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true

# GGML for fast inference (replacing ONNX)
# Removed Candle dependencies to fix cross-compilation issues
# Using simple tensor wrapper for mock implementation

# Memory mapping for instant model loading
memmap2 = "0.9"

# Fast serialization
bincode = "1.3"
rmp-serde = "1.1"  # MessagePack for metadata

# ndarray for tensor operations
ndarray = "0.15"
half = "2.3"  # For f16 support

# Text processing - espeak phonemes for Piper
# espeakng = "0.1"  # Removed - using pre-built DLLs instead to avoid cross-compilation issues

# Configuration
toml = "0.8"
serde_json = "1.0"

# Text processing
unicode-normalization = "0.1"

# ONNX Runtime. Must stay consistent with vocalize-rust's `ort` dependency:
# Cargo unifies features across the workspace, so if this one kept its default
# features it would union `download-binaries`/`copy-dylibs` into the
# `load-dynamic` build that vocalize-rust needs, and silently undermine the
# self-contained-wheel strategy.
#
# This previously read "2.0.0-rc.2" -- a caret range, so it never actually
# resolved to rc.2; it floated to whatever the workspace unified on. See
# vocalize-rust/Cargo.toml for the full story on why the pin is exact and why
# rc.12 does not work here.
ort = { version = "=2.0.0-rc.10", features = ["load-dynamic"], default-features = false, optional = true }

# Audio file writing (no external system deps)
hound = "3.5"  # WAV writing

# Utilities
uuid.workspace = true
once_cell.workspace = true
glob = "0.3"
directories = "5.0"
parking_lot.workspace = true
rayon.workspace = true
chrono = "0.4"
num_cpus = "1.16"

# Binary serialization for phoneme dictionaries
byteorder = "1.5"
lz4_flex = "0.11"  # Fast compression for embedded data

[build-dependencies]
# For embedding phoneme data at compile time
include_dir = "0.7"

[dev-dependencies]
# Existing test deps
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true
env_logger.workspace = true
tokio-test = "0.4"

# Testing tools
mockall = "0.12"
assert_fs = "1.1"
predicates = "3.1"
test-log = "0.2"
serial_test = "3.1"
rstest = "0.18"

# BDD acceptance layer (spec-forge flow): Gherkin features in test/features/
# at the repo root, step definitions in tests/bdd/steps/.
cucumber = "0.23"

[features]
default = []
# Feature for embedding models directly in binary
embedded-models = []
# ONNX backend support. This is the real, shipping synthesis path (Kokoro).
onnx = ["ort"]
# Experimental GGML/GGUF backend. OFF BY DEFAULT, and it must stay that way
# until it actually works.
#
# Status as of 2026-07-15: unfinished scaffolding. It had never been compiled --
# it was committed with 7 compile errors (`?` applied to non-Result values,
# missing Debug impls, and an mmap `unsafe` block that violates this crate's
# `#![deny(unsafe_code)]`). Because it has never compiled, it has never shipped
# in a wheel, so gating it off removes no working functionality.
#
# It is also not merely incomplete, it is a mock: `apply_attention` returns its
# input unchanged (ggml_engine/vits_model.rs:71-81), the feed-forward ignores
# its weights (:83-93), "convolutions" slice the first N floats of a weight
# tensor as a kernel, and the decoder mixes with hardcoded literals (:169).
# Despite the name, no ggml/llama.cpp/candle dependency exists -- the tensor
# type is a hand-rolled f32 Vec wrapper whose own docstring says "mock
# implementation" (ggml_engine/simple_tensor.rs:1).
#
# Enabling this feature builds code that cannot produce speech. Finishing it
# means writing a real VITS forward pass, not repairing these errors.
ggml = []

[[test]]
name = "bdd"
harness = false

[[bench]]
name = "tts_benchmark"
harness = false

[[bench]]
name = "audio_benchmark"
harness = false