[package]
name = "vocalize-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Python bindings for Vocalize - high-performance text-to-speech synthesis"

[lib]
name = "vocalize_rust"
crate-type = ["cdylib"]

[dependencies]
# Core vocalize library
vocalize-core = { path = "../vocalize-core" }

# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38", "generate-import-lib"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

# Async runtime
tokio = { workspace = true }

# Serialization for Python types
serde = { workspace = true }
serde_json = "1.0"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
pyo3-log = "0.8"

# Utilities
uuid = { workspace = true }
directories = "5.0"

# ONNX Runtime with load-dynamic for LLVM-built binaries.
#
# Version is pinned EXACTLY: `ort` is a pre-release crate, and a caret range on a
# pre-release ("2.0.0-rc.10") lets Cargo float across release candidates that make
# breaking changes. That float (rc.10 -> rc.12) is what broke this build.
#
# `api-22` must match the ONNX Runtime we bundle (1.22.0, see build_*.sh).
# ort-sys computes ORT_API_VERSION as `17 + <count of enabled api-N features>`
# (ort-sys/src/version.rs) and gates the fields of the `OrtApi` struct on those
# same features. With `default-features = false` and no api-N feature, ORT_API_VERSION
# is 17, so `OrtApi` is missing every field introduced after API 17 -- while
# `load-dynamic` still compiles the VitisAI execution-provider call that needs the
# api-18-gated field, which fails to compile (E0609).
ort = { version = "=2.0.0-rc.12", features = ["load-dynamic", "api-22"], default-features = false }

# Windows API for DLL loading
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "errhandlingapi", "winbase"] }

[dev-dependencies]
# Testing
pyo3-build-config = "0.20"
tempfile = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.20"

[features]
default = []
# Removed audio feature - now built-in with OS native APIs

