[package]
name = "vocalize-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Python bindings for Vocalize - high-performance text-to-speech synthesis"

[lib]
name = "vocalize_rust"
crate-type = ["cdylib"]

[dependencies]
# Core vocalize library.
#
# The `onnx` feature is REQUIRED, not optional: src/lib.rs calls
# `vocalize_core::onnx_engine::OnnxTtsEngine`, and vocalize-core gates that
# module behind `#[cfg(feature = "onnx")]` (vocalize-core/src/lib.rs:41). This
# dependency previously enabled no features at all, so the module the bindings
# depend on was compiled out and this crate could not build. It went unnoticed
# only because the build already died earlier, in `ort` and in ggml_engine.
vocalize-core = { path = "../vocalize-core", features = ["onnx"] }

# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38", "generate-import-lib"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

# Async runtime
tokio = { workspace = true }

# Serialization for Python types
serde = { workspace = true }
serde_json = "1.0"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
pyo3-log = "0.8"

# Utilities
uuid = { workspace = true }
directories = "5.0"

# ONNX Runtime with load-dynamic for LLVM-built binaries.
#
# PINNED EXACTLY, AND THE `=` MATTERS. `ort` is a pre-release crate, and a caret
# range over a pre-release ("2.0.0-rc.10") lets Cargo float across release
# candidates that make breaking API changes. This dependency previously read
# "2.0.0-rc.10" but silently resolved to rc.12, and that float is the single
# root cause of what looked like three unrelated build failures.
#
# rc.10 and rc.12 are different API generations targeting different runtimes:
#   - rc.10 wraps ONNX Runtime 1.22 -- which is exactly what build_*.sh bundles
#     (libonnxruntime.so.1.22.0). `ort::Error` is a plain, Send + Sync type.
#   - rc.12 wraps ONNX Runtime 1.24. It makes `Error` generic (`Error<R = ()>`,
#     ort-2.0.0-rc.12/src/error.rs:75), so a failed call yields
#     `ort::Error<SessionBuilder>` carrying a non-Send/non-Sync payload. That
#     does not convert into `anyhow::Error`, which breaks every `?` on an ort
#     call: 75 errors in model/manager.rs and onnx_engine.rs.
#
# Under rc.12 the build died even earlier, inside ort itself (E0609, no field
# `SessionOptionsAppendExecutionProvider_VitisAI` on `OrtApi`). That was a
# symptom of the same wrong-generation problem, not a separate bug, and
# "fixing" it by adding an api-N feature only unmasked the 75 errors behind it.
#
# So: do not "upgrade" this to rc.12 to make an error go away. Moving to rc.12
# means porting the ort call sites to the generic `Error` type AND re-bundling
# ONNX Runtime 1.24 in all three build scripts. Verified: with this pin,
# `cargo check -p vocalize-core --features onnx` reports 0 errors.
ort = { version = "=2.0.0-rc.10", features = ["load-dynamic"], default-features = false }

# Windows API for DLL loading
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "errhandlingapi", "winbase"] }

[dev-dependencies]
# Testing
pyo3-build-config = "0.20"
tempfile = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.20"

[features]
default = []
# Removed audio feature - now built-in with OS native APIs

# Experimental GGML/GGUF backend. OFF BY DEFAULT.
#
# Enabling this exposes the `process_text_to_phonemes` and `synthesize_ggml`
# Python functions, which route to vocalize-core's mock GGML engine. That engine
# cannot synthesize speech -- see vocalize-core/Cargo.toml's `ggml` feature for
# the evidence. Do not enable this for a release build.
ggml = ["vocalize-core/ggml"]

