[build-system]
requires = ["maturin>=1.9.0"]
build-backend = "maturin"

[project]
name = "vocalize-rust"
version = "0.1.0"
description = "Python bindings for Vocalize - high-performance text-to-speech synthesis"
requires-python = ">=3.8"
license = {text = "PolyForm-Noncommercial-1.0.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Free for non-commercial use",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[tool.maturin]
# Module name configuration
module-name = "vocalize_rust"